<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/theme_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_categorylist_intelligent_gate"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@color/tab_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intelligent_gate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/str_categorylist_intelligent_gate"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_categorylist_video_surveillance"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@color/tab_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/video_surveillance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/str_categorylist_video_surveillance"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_categorylist_alert"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@color/tab_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/alert" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/str_categorylist_alert"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_categorylist_polling"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@color/tab_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/polling" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/str_categorylist_polling"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_categorylist_parking_management"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@color/tab_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/parking_management" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/str_categorylist_parking_management"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_categorylist_building_talkback"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@color/tab_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/building_talkback" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/str_categorylist_building_talkback"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_categorylist_dining_system"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@color/tab_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dining_system" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/str_categorylist_dining_system"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_categorylist_security"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@color/tab_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/security" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/str_categorylist_security"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>