<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/tab_bg"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_business_project"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_width="50dp"
            android:layout_height="50dp"
            fresco:placeholderImage="@drawable/project" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/business_navi_project" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_business_rencai"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/tab_bg"
            android:src="@drawable/personnel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/business_navi_rencai" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_business_product"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="30dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/commodity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/business_navi_product" />
    </LinearLayout>
</LinearLayout>