<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/tab_bg">


    <LinearLayout
        android:id="@+id/layout_tab_business"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_tab_provide_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:clickable="false"
            android:src="@drawable/home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/str_index_tabmenu_business"
            android:textColor="@color/font_nonal"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_tab_shop"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <!-- android:clickable="false" 是为了防止ImageButton截取了触摸事件 ，这里事件要给它的上一级linearlayout-->
        <ImageView
            android:id="@+id/iv_tab_shop_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:clickable="false"
            android:src="@drawable/shop_tab" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/str_index_tabmenu_shop"
            android:textColor="@color/font_nonal"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_tab_shequ"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <!-- android:clickable="false" 是为了防止ImageButton截取了触摸事件 ，这里事件要给它的上一级linearlayout-->
        <ImageView
            android:id="@+id/iv_tab_shequ_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:clickable="false"
            android:src="@drawable/sq_tab" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/str_index_tabmenu_shequ"
            android:textColor="@color/font_nonal"
            android:textSize="10sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_tab_mine"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_tab_mine_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:clickable="false"
            android:src="@drawable/my_tab" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/str_index_tabmenu_mine"
            android:textColor="@color/font_nonal"
            android:textSize="10sp" />
    </LinearLayout>
</LinearLayout>
