<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentTop="true"
            android:background="@color/listview_divider" />


        <TextView
            android:id="@+id/settlement"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_shoppingcar_sellet"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/settlement"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/order_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/settlement"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sum_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="共计"
                    android:textColor="@color/goods_name"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/price"
                    style="@style/shopping_car_price"
                    android:layout_alignBottom="@+id/text1"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/text1"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/price"
                android:layout_gravity="right"
                android:text="@string/total_count"
                android:textColor="@color/goods_size"
                android:textSize="12sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/allselect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/settlement"
            android:layout_alignTop="@+id/settlement"
            android:paddingRight="30dp">

            <CheckBox
                android:id="@id/checkbox"
                style="@style/shopping_car_checkbox"
                android:checked="false"
                android:layout_marginRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/checkbox"
                android:text="@string/all_select"
                android:textColor="@color/goods_name"
                android:textSize="15sp" />
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/listview_divider" />

        <TextView
            android:id="@+id/add_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/addaddress_bg"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/add_address"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>